--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "culori": "^4.0.1",
     "framer-motion": "^12.4.7",
     "jotai": "^2.12.1",
+    "lucide-react": "^0.479.0",
     "prismjs": "^1.29.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
