--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@wooorm/starry-night": "^3.6.0",
     "culori": "^4.0.1",
     "framer-motion": "^12.4.7",
     "jotai": "^2.12.1",
     "lucide-react": "^0.479.0",
-    "prismjs": "^1.29.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.2",
@@ -30,7 +30,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "daisyui": "^5.0.0",
+    "daisyui": "^5.0.6",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -39,6 +39,7 @@
     "prettier": "^3.5.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "shiki": "^3.2.1",
     "tailwindcss": "^4.0.8",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
