--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,4 +28,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: cp -r /home/app/actions-runner/_work/elle-app/elle-app/dist/. /var/www/elle-app
+    - run: cp -r /home/app/actions-runner/_work/oklch-themer/oklch-themer/dist/. /var/www/oklch-themer
