--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,12 +20,21 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - name: Checkout 🛎️
     - uses: actions/checkout@v4
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: cp -r /home/app/actions-runner/_work/oklch-themer/oklch-themer/dist/. /var/www/oklch-themer
+
+    - name: Install & Build 🔧
+    - run: |
+        npm ci
+        npm run build --if-present
+        
+    - name: Deploy 🚀
+    - run: npm run deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
