--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,30 +11,30 @@ on:
 
 jobs:
   build:
-
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - name: Checkout 🛎️
-    - uses: actions/checkout@v4
+      - name: Checkout 🛎️
+      - uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-
-    - name: Install & Build 🔧
-    - run: |
-        npm ci
-        npm run build --if-present
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      
+      - name: Install & Build 🔧
+        run: |
+          npm ci
+          npm run build --if-present
         
-    - name: Deploy 🚀
-    - run: npm run deploy
+      - name: Deploy 🚀
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm run deploy
+        
