--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,13 +1,8 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Deploy
 
 on:
   push:
     branches: [ "main" ]
-  #pull_request:
-    #branches: [ "main" ]
 
 jobs:
   build:
@@ -16,25 +11,23 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - name: Checkout 🛎️
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      
+
       - name: Install & Build 🔧
         run: |
           npm ci
           npm run build --if-present
-        
+
       - name: Deploy 🚀
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run deploy
-        
